--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.1",
     "react-toastify": "^11.0.5",
-    "swiper": "^9.4.1"
+    "swiper": "^9.4.1",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
