--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.1",
+    "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
     "swiper": "^9.4.1",
     "zustand": "^5.0.5"
